# POO-Lusicic

./: .gitignore
Ejercicio 00/university_notes_manager/: README.txt  delete_grade.php  functions.php  index.php  save_grade.php  save_subject.php  update_grade.php
Ejercicio 01/: file3.ext  readme.md
Ejercicio 01/proyect2/: loginwidget.cpp  loginwidget.h  main.cpp  mainwidget.cpp  noteeditor.cpp  noteeditor.h  workboardwidget.cpp  workdialog.h  workmanager.cpp  workmanager.h
Ejercicio 02/: readme.md
Ejercicio 02/Ejercicio02-Lusicic/: Ejercicio02-Lusicic.pro  main.cpp  mainwindow.cpp  servermonitor.cpp  servermonitor.h
Ejercicio 03/: README.txt  canvasmodel.cpp  canvasmodel.h  canvasview.cpp  canvasview.h  ejercicio03_AugustoLanderreche.pro  main.cpp  mainwindow.cpp  mainwindow.h  paso_a_paso_servidor.txt  syncmanager.cpp  syncmanager.h  tutorial_cliente.txt  tutorial_colaboracion.txt  tutorial_servidor.txt  tutorial_troubleshooting.txt
Ejercicio 04/: CMakeLists.txt  KanbanBoard.pro  readme.md
Ejercicio 04/src/: apiclient.cpp  apiclient.h  carddialog.cpp  carddialog.h  cardwidget.cpp  cardwidget.h  columnwidget.cpp  columnwidget.h  kanbanboard.cpp  kanbanboard.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  models.h
Ejercicio 05/: readme.md
Ejercicio 05/clase1-4-26/: clase1-4-26.pro  login.cpp  login.h  main.cpp
Ejercicio 06/ejercicioArrastrar/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Ejercicio 07/: Readme.md
Ejercicio 08/: readme.md
Ejercicio 09/: readme.md
Ejercicio 1/: README  README.md
Ejercicio 2/: README.md
(+62 files in other folders)
